Fix navbar layout while collapse in smallscreen mode.

--- a/src/assets/sass/_bootstrap.scss
+++ b/src/assets/sass/_bootstrap.scss
@@ -4,3 +4,8 @@
 	border: none;
 	box-shadow: $box-shadow;
 }
+
+.dropdown-menu-right {
+	right: 0;
+	left: auto;
+}
