--- a/src/assets/sass/admin/_topbar.scss
+++ b/src/assets/sass/admin/_topbar.scss
@@ -66,9 +66,11 @@
 		height: 100%;
 
 		.user-menu {
-			font-size: 30px;
+			font-size: 1.2rem;
 			color: $text;
-			padding: 0 10px;
+		}
+		.user-menu a:hover {
+			color: $text;
 		}
 	}
 }
